# software-flow-app

./: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/handlers/: health.rs  mod.rs  search.rs  users.rs
backend/src/models/: mod.rs  user.rs
backend/src/services/: mod.rs
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: About.tsx  AgileDemo.tsx  Home.tsx
frontend/src/components/AgileRequirements/: BacklogView.tsx  CreateEpicModal.tsx  CreateStoryModal.tsx  DependenciesView.tsx  EpicDetails.tsx  EpicsList.tsx  ProjectSettings.tsx  RequirementsManagement.tsx  RequirementsMetrics.tsx  StoriesList.tsx  StoryDetails.tsx
frontend/src/types/: agile.ts
